--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>PikoHub || Best Movie Downlod Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+        <!-- Social sharing preview -->
+    <meta property="og:title" content="PikoHub || Best Movie Download Website">
+    <meta property="og:description" content="Download the best movies in all languages and genres.">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PikoHub || Best Movie Download Website">
+    <meta name="twitter:description" content="Download the best movies in all languages and genres.">
+    <meta name="twitter:image" content="logo.png">
 </head>
 <body>
     <div id="inline-search-results" class="inline-search-results" style="display:none;"></div>
