--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PikoHub || Best Movie Downlod Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
         <!-- Social sharing preview -->
     <meta property="og:title" content="PikoHub || Best Movie Download Website">
     <meta property="og:description" content="Download the best movies in all languages and genres.">
