--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>PikoHub || Best Movie Downlod Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
         <!-- Social sharing preview -->
     <meta property="og:title" content="PikoHub || Best Movie Download Website">
     <meta property="og:description" content="Download the best movies in all languages and genres.">
-    <meta property="og:image" content="logo.png">
+    <meta property="og:image" content="fticket.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:url" content="https://movhub-pi.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PikoHub || Best Movie Download Website">
     <meta name="twitter:description" content="Download the best movies in all languages and genres.">
-    <meta name="twitter:image" content="logo.png">
+    <meta name="twitter:image" content="fticket.jpg">
 </head>
 <body>
     <div id="inline-search-results" class="inline-search-results" style="display:none;"></div>
