--- a/movie.html
+++ b/movie.html
@@ -6,6 +6,7 @@
     <title>Movie Details | PikoHub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
     <!-- Main Header (copied from index.html) -->
