--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <title>Search Results | PikoHub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header class="main-header">
