--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <!-- Social sharing preview -->
     <meta property="og:title" content="PikoHub || Best Movie Download Website">
     <meta property="og:description" content="Download the best movies in all languages and genres.">
-    <meta property="og:image" content="fticket.jpg">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://movhub-pi.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PikoHub || Best Movie Download Website">
     <meta name="twitter:description" content="Download the best movies in all languages and genres.">
-    <meta name="twitter:image" content="fticket.jpg">
+    <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg">
 </head>
 <body>
     <div id="inline-search-results" class="inline-search-results" style="display:none;"></div>
