--- a/movie.html
+++ b/movie.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
-
+    <!-- Social sharing preview (will be updated by JS) -->
+    <meta property="og:title" content="PikoHub || Best Movie Download Website" id="meta-og-title">
+    <meta property="og:description" content="Download the best movies in all languages and genres." id="meta-og-desc">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg" id="meta-og-image">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/" id="meta-og-url">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PikoHub || Best Movie Download Website" id="meta-twitter-title">
+    <meta name="twitter:description" content="Download the best movies in all languages and genres." id="meta-twitter-desc">
+    <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg" id="meta-twitter-image">
 </head>
 <body>
     <!-- Main Header (copied from index.html) -->
@@ -204,6 +213,29 @@
         const url = new URL(window.location.href);
         return url.searchParams.get(name);
     }
+    // --- Dynamic meta tags for social sharing ---
+    function setDynamicMetaTags(movie) {
+        if (!movie) return;
+        // Set og:title and twitter:title
+        var ogTitle = document.getElementById('meta-og-title');
+        var twitterTitle = document.getElementById('meta-twitter-title');
+        if (ogTitle) ogTitle.setAttribute('content', movie.title + ' | PikoHub');
+        if (twitterTitle) twitterTitle.setAttribute('content', movie.title + ' | PikoHub');
+        // Set og:image and twitter:image
+        var ogImage = document.getElementById('meta-og-image');
+        var twitterImage = document.getElementById('meta-twitter-image');
+        if (ogImage) ogImage.setAttribute('content', movie.bannerLink);
+        if (twitterImage) twitterImage.setAttribute('content', movie.bannerLink);
+        // Set og:url
+        var ogUrl = document.getElementById('meta-og-url');
+        if (ogUrl) ogUrl.setAttribute('content', window.location.href);
+        // Set og:description and twitter:description (optional: use movie title or a static desc)
+        var ogDesc = document.getElementById('meta-og-desc');
+        var twitterDesc = document.getElementById('meta-twitter-desc');
+        var desc = 'Watch and download ' + movie.title + ' on PikoHub.';
+        if (ogDesc) ogDesc.setAttribute('content', desc);
+        if (twitterDesc) twitterDesc.setAttribute('content', desc);
+    }
     // Render movie details and similar posts
     function renderMovieDetails() {
         const id = getQueryParam('id');
@@ -219,6 +251,7 @@
             document.getElementById('similar-posts-section').style.display = 'none';
             return;
         }
+        setDynamicMetaTags(movie);
         container.innerHTML = `
         <div class="movie-detail-card">
             <div class="movie-detail-flex">
@@ -286,47 +319,6 @@
         `).join('');
     }
     document.addEventListener('DOMContentLoaded', renderMovieDetails);
-
-    // --- Dynamic meta tags for social sharing ---
-    function setDynamicMetaTags(movie) {
-        function setMeta(property, content) {
-            let el = document.querySelector(`meta[property='${property}'], meta[name='${property}']`);
-            if (!el) {
-                el = document.createElement('meta');
-                if (property.startsWith('og:')) el.setAttribute('property', property);
-                else el.setAttribute('name', property);
-                document.head.appendChild(el);
-            }
-            el.setAttribute('content', content);
-        }
-        if (movie) {
-            setMeta('og:title', movie.title + ' | PikoHub');
-            setMeta('og:image', movie.bannerLink);
-            setMeta('twitter:title', movie.title + ' | PikoHub');
-            setMeta('twitter:image', movie.bannerLink);
-            setMeta('og:description', 'Download ' + movie.title + ' and more movies on PikoHub.');
-            setMeta('twitter:description', 'Download ' + movie.title + ' and more movies on PikoHub.');
-            setMeta('og:url', window.location.href);
-        } else {
-            // fallback to site defaults
-            setMeta('og:title', 'PikoHub || Best Movie Download Website');
-            setMeta('og:image', 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg');
-            setMeta('twitter:title', 'PikoHub || Best Movie Download Website');
-            setMeta('twitter:image', 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9b9KRfQNvaXBi6MgDGstrMmAK_kVycwJ52ibiBrjsR5x7RIbtoRJsdSFxcMSukEftuWMb6xDgMMryNSYgm_0fDjCsdtusR5ZHL_j-XVc15VVRYSPMnWafSgETCmUyMbR7psSk8I4eP50AWoHyYKheYu561ZSSZviV7QAvZBD9RmIaPyZZM2ppCwdEFA/s500/fticket.jpg');
-            setMeta('og:description', 'Download the best movies in all languages and genres.');
-            setMeta('twitter:description', 'Download the best movies in all languages and genres.');
-            setMeta('og:url', window.location.href);
-        }
-    }
-    // Call after movie is loaded
-    document.addEventListener('DOMContentLoaded', function() {
-        const id = getQueryParam('id');
-        let movie = null;
-        if (window.movies && id) {
-            movie = window.movies.find(m => m.id == id);
-        }
-        setDynamicMetaTags(movie);
-    });
 
     // --- Menu submenu slide toggle (desktop & mobile) ---
     function setupMenuSlide() {
